fix overlap on form

--- a/src/Components/teachers/teachers.scss
+++ b/src/Components/teachers/teachers.scss
@@ -133,7 +133,7 @@
     // border:1px solid red;
     display:flex;
     padding-top:5%;
-    height: 56px;
+    // height: 56px;
   }
 }
 
